# long-task-wakeup

./: README.md  SKILL.md  pyproject.toml
scripts/: install_from_git.sh
src/long_task_callback/: __init__.py  cli.py
src/long_task_callback/skill/: SKILL.md
src/long_task_callback/skill/agents/: openai.yaml
