[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-long-task-callback"
version = "0.2.0"
description = "Explicit callback CLI for waking a Codex session after a long-running task finishes"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Local" }
]
keywords = ["codex", "callback", "long-running-tasks"]

[project.scripts]
codex-long-task-wakeup = "long_task_callback.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
long_task_callback = ["skill/SKILL.md", "skill/agents/openai.yaml"]
